--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,144 @@ body {
   font-family: $openSans;
   font-weight: $bold;
 }
+
+header {
+  background: $darkPurple;
+  padding: 10px;
+  text-align: center;
+  #main-header {
+    position: relative;
+    padding: 5px 0 20px 0;
+    font-size: 1.6em;
+    color: $white;
+    span {
+      color: $teal;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: 25%;
+      border-bottom: 1px solid $darkGrey;
+    }
+  }
+  #name {
+    padding: 10px 0 0 0;
+    font-size: 0.9em;
+    color: $white;
+    font-weight: $bold;
+  }
+}
+
+.challenge-name {
+  position: relative;
+  margin-top: 30px;
+  padding-bottom: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 25%;
+    border-bottom: 1px solid $lightGrey;
+  }
+}
+
+#header-bar-wrapper {
+  margin: 30px auto;
+}
+
+.navbar {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 75px;
+  background: $lightGrey;
+  img {
+    height: 50px;
+    margin: 10px;
+    border: 1px solid $darkGrey;
+    border-radius: 50%;
+  }
+  #nav-toggle-btn {
+    @include button;
+    margin-right: 10px;
+    &:focus {
+      border-radius: 10px;
+      border: 1px solid $darkGrey;
+      outline: none;
+    }
+  }
+  #link-wrapper {
+    display: none;
+    position: absolute;
+    bottom: -270px;
+    flex-direction: column;
+    width: 100%;
+    background: transparentize($darkGrey, .7);
+    .nav-link {
+      @include button;
+      width: 95%;
+      margin: 20px auto;
+      text-align: left;
+    }
+    input {
+      height: 30px;
+      width: 95%;
+      margin: 0 auto 15px auto;
+      border: 1px solid $darkGrey;
+      font-family: $openSans;
+      font-size: 1em;
+      text-indent: 35px;
+      background: $offWhite url(./images/search.svg) no-repeat 5px 5px / 20px;
+    }
+  }
+}
+
+.show-nav {
+  display: flex;
+}
+
+@media screen and (min-width: 625px) {
+  .navbar {
+    #nav-toggle-btn {
+      display: none;
+    }
+    #link-wrapper {
+      position: relative;
+      bottom: 0;
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+      width: auto;
+      background: transparent;
+      .nav-link {
+        font-size: 0.9em;
+      }
+      input {
+        margin: 0 10px 0 0;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 750px) {
+  .navbar {
+    #link-wrapper {
+      .nav-link {
+        font-size: 1.1em;
+      }
+      input {
+        width: 300px;
+      }
+    }
+  }
+}
